LATEST
-------------------------------
- ITF validation (reader): allow unique TID per table
- ITF raw reader: fixed type cast exception

ili2fme 7.0.12 (2020-12-28)
-------------------------------
- ili2c-5.1.5
- iox-ili-1.21.4

ili2fme 7.0.11 (2020-10-02)
-------------------------------
- ili2c-5.1.4
- iox-ili-1.21.3

ili2fme 7.0.10 (2020-09-29)
-------------------------------
- ili2c-5.1.3
- iox-ili-1.21.2

ili2fme 7.0.9 (2020-08-28)
-------------------------------
- new reader parameter "ITF Ignore Polygon Building Errors"
- ITF reader: add ili2fme-6.x compatibility mode (enabled if reader parameter CREATE_LINETABLES present)
- ITF validation (writer): allow unique TID per table
- ili2c-5.1.2
- iox-ili-1.21.1


ili2fme 7.0.8 (2020-05-01)
-------------------------------
- ili2c-5.1.1
- iox-ili-1.21.0

ili2fme 7.0.7 (2020-04-01)
-------------------------------
- switch build tool to gradle
- switch msi to x64 (#16)
- ili2c-5.0.8
- iox-ili-1.20.18

ili2fme 7.0.6 (2020-02-03)
-------------------------------
- ili2c-5.0.6
- iox-ili-1.20.17

ili2fme 7.0.5 (2020-01-31)
-------------------------------
- ili2c-5.0.5
- iox-ili-1.20.16

ili2fme 7.0.4 (2019-11-08)
-------------------------------
- ili2c-5.0.3
- iox-ili-1.20.14

ili2fme 7.0.3 (2019-09-06)
-------------------------------
- ili2c-5.0.2
- iox-ili-1.20.13

ili2fme 7.0.2 (2019-08-28)
-------------------------------
- fix ClassCastException: ch.ehi.iox.adddefval.ItfAddDefValueReader in Ili2Reader.myread()
- fix missing raw main table features (*_MT)
- switch validator to ITF raw mode if ILI1_LINETABLES=Raw

ili2fme 7.0.1 (2019-08-23) BETA
-------------------------------
- filter baskets (topic filter) in IoxReader
- implement linetable reading
- integrated ilivalidator
- ili2c-5.0.1
- iox-ili-1.20.12

ili2fme 7.0.0 (2019-07-05) BETA
-------------------------------
- refactored polygon building
- new Reader option to select linetable mapping: ILI1_LINETABLES (Polygon, Raw, Polygon+Raw) 

ili2fme 6.3.0 (2019-04-24)